# simple_stream_recorder

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
src/simple_stream_recorder/: __init__.py  __main__.py  app.py  mqtt_client.py  recorder.py
